test/testdata/string/invalid_property_access_error.lox
"foo".y; // error: property access is not valid for 'string' object
